# Facematch

./: docker-compose.yml  package-lock.json  test.db
backend/: .gitignore  Dockerfile  pyproject.toml  sql_app.db
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: images.py
frontend/: .gitignore  Dockerfile
frontend/src/: App.css  App.js  Modal.css  Modal.js  Ranking.css  Ranking.js  Toast.css  Toast.js  Upload.css  Upload.js  confirmDelete.js
