[tool.poetry]
name = "facematch"
version = "0.1.0"
description = ""
authors = ["Guillaume Demay <guillaumedemay@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
fastapi-cors = "^0.0.6"
psycopg2-binary = "^2.9.9"
mypy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
